# StringingTogetherApis

./: .gitignore  README.md  failed_dois.pickle  notebook.ipynb  pyproject.toml  res_list.pickle  rg_scraping.ipynb
