[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "3.8.6"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
ipykernel = "^6.9.1"
habanero = "^1.0.0"
linkedin-api = "~=2.0.0a"
elsapy = "^0.5.0"
scholarly = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
